--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2292,6 +2292,8 @@ button {
     }
 }
 
+.alert-md .alert-radio-label{white-space: normal !important;}
+
 // Product End ///
 // Transaction Start ///
 .transaction-list {
