--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -21,4 +21,12 @@ page-home {
         transform: translate(-50%, -50%);
         height: 50px;
     }
+    .reward-text{
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 19px;
+        padding-right: -21px;
+        padding-left: 12px;
+        font-weight: 700;
+    }
 }
