camera image quality

--- a/src/pages/login-section/registration/registration.scss
+++ b/src/pages/login-section/registration/registration.scss
@@ -78,7 +78,7 @@ page-registration {
 	.upload-document
 	{
 		background: #f5c000;
-		height: 150px;
+		min-height: 150px;
 		border: solid 1px #fad13a;
 		display: flex;
 		align-items: center;
