--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1496,14 +1496,15 @@ button {
     padding: 16px;
     .phone {
         .phone-head {
-            margin-bottom: 20px;
+            margin-bottom: 16px;
             display: flex;
             align-items: flex-start;
             justify-content: space-between;
             h1 {
-                font-size: 14px;
+                font-size: 12px;
                 color: $secondary;
-                font-weight: $semibold;
+                // font-weight: $semibold;
+                line-height: 18px;
                 margin-right: 16px !important;
             }
             p {
@@ -1514,15 +1515,12 @@ button {
             }
         }
         .phone-img {
-            height: 230px;
-            margin-bottom: 20px;
+           
+            margin-bottom: 16px;
             overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
-            img {
-                width: 240px;
-            }
         }
     }
 }
