--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -17,7 +17,7 @@ page-profile {
 		position: absolute;
 		top: -14px;
 		right: -14px;
-		background: #d9ad0c;
+		background: #6b3716;
 		color: #fff;
 		width: 30px;
 		height: 30px;
