--- a/src/pages/login-section/registration/registration.scss
+++ b/src/pages/login-section/registration/registration.scss
@@ -77,7 +77,7 @@ page-registration {
 	
 	.upload-document
 	{
-		background: #f5c000;
+		background: #6b3716;
 		min-height: 150px;
 		border: solid 1px #fad13a;
 		display: flex;
@@ -113,7 +113,7 @@ page-registration {
 		margin: 0 auto;
 		width: 65px;
 		height: 65px;
-		background: #f5c000;
+		background: #6b3716;
 		display: flex;
 		align-items: center;
 		justify-content: center;
