--- a/src/pages/login-section/registration/registration.scss
+++ b/src/pages/login-section/registration/registration.scss
@@ -109,6 +109,13 @@ page-registration {
 		}
 	}
 	
+	.error-msg p {
+		background: #fff;
+		text-align: right;
+		font-size: 12px;
+		color: #ff0000;
+	}
+
 	.profile-circle {
 		margin: 0 auto;
 		width: 65px;
